...
    "Get alerts before your reps vote on important issues? Usually 1-2 messages per month." : {
      "comment" : "IssueDone Alert message"
    },
    "Get notified how your rep votes on your topics,\r1-2 notifications per month" : {
      "comment" : "Inbox push notifications prompt"
    },
    "Get Started" : {
      "comment" : "Welcome button title"
    },
    "Governor Grouping" : {
      "comment" : "Office Holder grouping description",
      "extractionState" : "extracted_with_value",
      "localizations" : {
...
            "state" : "new",
            "value" : "Secretary of State"
          }
        }
      }
    },
    "See your script" : {
      "comment" : "navigation link button to see the script"
    },
    "Select an issue on the topics tab to show relevant reps and phone numbers" : {
      "comment" : "Inbox Alert title"
    },
    "Select an issue to get started" : {
...
    "Send me important votes" : {
      "comment" : "Prompt for push notifications button title"
    },
    "Set a calling group name to track calls with others" : {
      "comment" : "AboutSheet section footer"
    },
    "Set your location" : {
      "comment" : "IssueDetail button prompt to set location\nIssueDetail prompt to set location"
    },
    "Set your location\rto see your reps" : {
      "comment" : "Inbox no contacts suggestion"
    },
    "Set your location to find your representatives" : {
...
