...

extension Contact {
    static func placeholderContact(for area: String) -> [Contact] {
        switch area {
        case "US Senate":
            [
                Contact(id: "1234", area: area, name: area, party: area, phone: "", photoURL: nil, fieldOffices: []),
                Contact(id: "1235", area: area, name: area, party: area, phone: "", photoURL: nil, fieldOffices: []),
            ]
        default:
            // list views will complain if we have mutiple placeholders with the same ID so randomize them
            [Contact(id: String(Int.random(in: 0 ..< 999)), area: area, name: area, party: area, phone: "", photoURL: nil, fieldOffices: [])]
        }
...
