...
                        TextField(text: $locationText) {
                            Text("Enter a location", comment: "LocationSheet prompt")
                        }.onSubmit {
                            locationSearch()
                        }
                        .padding(.leading)
                        .accessibilityIdentifier("locationField")
                    }
                    .padding(.vertical, 12)
                    .font(.system(size: 18, weight: .regular, design: .default))
                    .foregroundColor(.secondary)
                    .frame(maxWidth: .infinity)
                    .clipped()
...
