...
                            } label: {
                                Image(systemName: "ellipsis.circle")
                                    .font(.title2)
                                    .foregroundColor(Color.fivecallsDarkBlue)
                                    .padding(.leading, 4)
                            }
                            .accessibilityIdentifier("localNumbers")
                        }
                    }
                }.padding(.bottom)

                Markdown(issueMarkdown)
                    .padding(.bottom)
...
